[DDW-453] Fix scrollbar style

--- a/source/renderer/app/components/staking/rewards/StakingRewardsForIncentivizedTestnet.scss
+++ b/source/renderer/app/components/staking/rewards/StakingRewardsForIncentivizedTestnet.scss
@@ -54,6 +54,11 @@
     height: calc(100% - 53px);
     overflow-x: hidden;
     overflow-y: scroll;
+
+    &::-webkit-scrollbar-track {
+      margin-bottom: -20px;
+      margin-top: -20px;
+    }
   }
 
   .noRewardsLabel {
